HELIO-3742 - updates to about, accessibility, and partner with us page

--- a/fulcrum/about.html
+++ b/fulcrum/about.html
@@ -10,7 +10,7 @@ permalink: /about/
 
 <p>The platform consists of a client-branded hosting environment and a set of value-added publishing services to help partner publishers expand their capabilities. For more information, <a href="/partner-with-us/">read about our partnership models and services</a>.</p>
 
-<p>Fulcrum has been developed by a group of campus-based publishers working closely with disciplinary faculty and information science specialists who recognize the changing nature of scholarly publishing in the humanities and qualitative social sciences. <a href="http://www.publishing.umich.edu/projects/hydra/">Initial development has been supported by a generous grant from the Andrew W. Mellon Foundation</a> and implemented by the University of Michigan Library and Press working with partners from Indiana, Minnesota, Northwestern, and Penn State universities.</p>
+<p>Fulcrum has been developed by a group of campus-based publishers working closely with disciplinary faculty and information science specialists who recognize the changing nature of scholarly publishing in the humanities and qualitative social sciences. Initial development has been supported by a generous grant from the Andrew W. Mellon Foundation and implemented by the University of Michigan Library and Press working with partners from Indiana, Minnesota, Northwestern, and Penn State universities.</p>
 
 <p>For more information about the platform, please subscribe to our <a href="https://fulcrum.org/#get-updates">newsletter</a>, follow us on <a href="https://twitter.com/fulcrumpub">Twitter</a>, or send an e-mail to <a href="mailto:fulcrum-info@umich.edu">fulcrum-info@umich.edu</a>.</p>
 
