--- a/fulcrum/partner-with-us.html
+++ b/fulcrum/partner-with-us.html
@@ -328,7 +328,7 @@ permalink: /partner-with-us/
   </div>
 
 <h2 id="services">Fulcrum Services</h2>
-<p>We recognize that some of our partners have fully-staffed production departments, and some don’t. For both hosted collection and hosted publisher partners, Fulcrum offers a suite of à la carte publishing services, taking advantage of the expertise of <a href="https://www.publishing.umich.edu">Michigan Publishing</a>.</p>
+<p>We recognize that some of our partners have fully-staffed production departments, and some don’t. For both hosted collection and hosted publisher partners, Fulcrum offers a suite of à la carte publishing services, taking advantage of the expertise of <a href="https://services.publishing.umich.edu">Michigan Publishing</a>.</p>
 
 <ul class="services-list">
   <li><i class="material-icons">border_color</i> Copyediting and Proofreading</li>
