--- a/fulcrum/accessibility.html
+++ b/fulcrum/accessibility.html
@@ -4,7 +4,7 @@ title: Accessibility
 permalink: /accessibility/
 ---
 
-<p class="milli">Last updated: February 3, 2021</p>
+<p class="milli">Last updated: March 4, 2021</p>
 <p>Accessibility is a core value and design component of Fulcrum.  As part of the ongoing development of Fulcrum, we work to make the platform and its content inclusive, accessible, and usable for all readers.</p>
 <p>Fulcrum aims to meet the latest <a href="https://www.w3.org/WAI/WCAG21/quickref/?versions=2.1" title="Web Content Accessibility Guidelines 2.1 AA">WCAG 2 AA Standards</a> (currently WCAG 2.1 AA) in two ways:</p>
 <ul>
@@ -131,6 +131,7 @@ permalink: /accessibility/
 
 <h3>ACLS Humanities E-Book</h3>
 <p><a href="/docs/Fulcrum-HEB-VPAT2.3INT-20200519.pdf">ACLS HEB Voluntary Product Accessibility Template (VPAT®) Version 2.3 INT</a></p>
+<p>In addition to the ACLS HEB VPAT®, ACLS HEB has made available an <a href="/docs/ConformanceandRemediationRoadmap-FulcrumACLSHEB-Feb2021.pdf">Accessibility Conformance and Remediation Roadmap (Feb. 2021)</a> which describes timelines, development plans, and workarounds for issues identified in the VPAT®.</p>
 <p>There are two types of book content within the ACLS Humanities E-Book (HEB). The type informs the accessibility of that content:</p>
 <ul>
   <li>EPUBs created by reformatting print to digital and include page scans and uncorrected OCR text. When read in the Fulcrum Reader, the uncorrected OCR can be accessed by adjusting the Settings and Preferences to use the text renditions. These titles are available for chapter download only in PDF format. The PDF downloads do not include the uncorrected OCR.</li>
