--- a/fulcrum/feedback.html
+++ b/fulcrum/feedback.html
@@ -6,6 +6,4 @@ permalink: /feedback/
 
 <p>We would appreciate receiving feedback on your experience with Fulcrum. Although any and all feedback is welcome, we'd especially appreciate hearing from you if you spot a bug or something isn't working as you'd expect it to.</p>
 
-<p><a href="https://umich.qualtrics.com/jfe/form/SV_3KSLynPij0fqrD7">Make a feature request or report a bug</a></p>
-
-<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSeYGhkCVgVsSREm-6AsufDJzO8kQou7RVsBoO_ZV8Z8I3y3dA/viewform">Report an accessibility issue</a></p>
+<p><a href="https://umich.qualtrics.com/jfe/form/SV_3KSLynPij0fqrD7">Make a feature request, report a bug, or report an accessibility issue</a>.</p>
