Remove reference to HT pilot

--- a/fulcrum/preservation.html
+++ b/fulcrum/preservation.html
@@ -107,10 +107,9 @@ maintaining its access by readers.</p>
 <h4>Preservation Partners</h4>
 <p>Fulcrum has diversified its preservation portfolio through relationships with a
 number of other organizations, each with their own technological implementation
-and management structures. We have contracted with CLOCKSS and have begun a
-pilot with HathiTrust to preserve content in their repository networks. Both are
-CRL-certified TRAC-compliant and introduce geographically distributed redundancy
-to our preservation solutions. Deposits into CLOCKSS and HathiTrust must be
+and management structures. We have contracted with CLOCKSS, which is
+CRL-certified TRAC-compliant and introduces geographically distributed redundancy
+to our preservation solutions. Deposits into CLOCKSS must be
 configured on a per-collection basis; at the present time, our workflows cover
 the University of Michigan Press Ebook Collection. If you're interested in
 having your collection included in such an arrangement, please speak with the
@@ -153,8 +152,8 @@ preserving all content in the form of its constituent files, migrating to new
 formats when both necessary and possible. All content is accompanied by metadata
 in schema that conform to current best practices in the Library community.
 Deposits into APTrust will include the full range of content that U-M Library
-commits to preserving. At present, CLOCKSS and HathiTrust are supporting ingest
-and preservation support for the EPUB3 files, and we will be working to add
+commits to preserving. At present, CLOCKSS is supporting ingest
+and preservation support for EPUB3, and we will be working to add
 support for media formats in the future.</p>
 
 <p>U-M Library will conduct a review after a 10 year period to determine if objects
