PDF/A in CLOCKSS

--- a/fulcrum/preservation.html
+++ b/fulcrum/preservation.html
@@ -153,7 +153,7 @@ formats when both necessary and possible. All content is accompanied by metadata
 in schema that conform to current best practices in the Library community.
 Deposits into APTrust will include the full range of content that U-M Library
 commits to preserving. At present, CLOCKSS is supporting ingest
-and preservation support for EPUB3, and we will be working to add
+and preservation support for EPUB3 and PDF/A, and we will be working to add
 support for media formats in the future.</p>
 
 <p>U-M Library will conduct a review after a 10 year period to determine if objects
