FULCRUMOPS-126 - add known issue with ableplayer; update roadmap for platform and HEB; remove resolved issues; add a/v resource

--- a/fulcrum/accessibility.html
+++ b/fulcrum/accessibility.html
@@ -4,7 +4,7 @@ title: Accessibility
 permalink: /accessibility/
 ---
 
-<p class="milli">Last updated: June 30, 2021</p>
+<p class="milli">Last updated: Feb 4, 2022</p>
 <p>Accessibility is a core value and design component of Fulcrum.  As part of the ongoing development of Fulcrum, we work to make the platform and its content inclusive, accessible, and usable for all readers.</p>
 <p>Fulcrum aims to meet the latest <a href="https://www.w3.org/WAI/WCAG21/quickref/?versions=2.1" title="Web Content Accessibility Guidelines 2.1 AA">WCAG 2 AA Standards</a> (currently WCAG 2.1 AA) in two ways:</p>
 <ul>
@@ -34,8 +34,12 @@ permalink: /accessibility/
 <h2 id="timeline">Accessibility Timeline and Roadmap</h2>
 <p>Our work on platform accessibility issues is available in our <a href="https://tools.lib.umich.edu/jira/browse/HELIO-3689?jql=project%20in%20(HELIO%2C%20CSB)%20AND%20status%20in%20(%22In%20Progress%22%2C%20%22To%20Do%22%2C%20%22For%20Review%22)%20AND%20labels%20%3D%20accessibility">issue tracker for Fulcrum</a>.</p>
 
+<h3>2022</h3>
+<p>In January 2022, the Fulcrum team upgraded its time-based media player, AblePlayer, to a more current version to improve support for video description and interactive transcripts.</p>
+
 <h3>2021</h3>
 <p>In June 2021, we updated all VPAT®s to Version 2.4 INT and worked with the <a href="http://www.daisy.org/">DAISY Consortium</a> to have the Fulcrum Reader tested with NVDA and Microsoft Edge Read Aloud.</p>
+<p>In December 2021, the Fulcrum team held two sprints focused on usability and accessibility improvements to the platform, resolving several outstanding issues around semantic encoding and screen reader support that had been identified in previous accessibility evaluations.</p>
 
 <h3>2020</h3>
 <p>From January to March 2020, in collaboration with <a href="https://usability.msu.edu/">Michigan State University Usability and Accessibility Research Consulting</a>, Fulcrum was tested by assistive technology and limited dexterity users. User testing helped identify usability and accessibility issues, specifically with the Fulcrum Reader, which we are working to address.</p>
@@ -77,7 +81,6 @@ permalink: /accessibility/
 <ul>
   <li>In the Fulcrum Reader, alt-text image descriptions will be read when the embedded image is selected via the TAB key, but will not be read automatically via continuous reading. Alt-text image descriptions can be accessed by selecting the embedded image via keyboard controls or by following the link to the full image media page.</li>
   <li>In the Fulcrum Reader, when searching inside the text of a book and following a search result, the matched term in the text is indicated on the page only through visual highlighting of the matched text, but the excerpts and chapter locations are accessible through screen reader technology.</li>
-  <li>In the Fulcrum Reader, navigation from page list pages, search results, and internal links such as footnotes do not focus properly to the anchored element. NVDA instead begins reading at the beginning of the anchored element's parent chapter.</li>
   <li>In the Fulcrum Reader, text selection for highlighting or note taking does not work as expected.</li>
   <li>On <a href="https://www.fulcrum.org/concern/monographs/sj139271b?locale=en">book title pages</a>, “Table of Contents” is the default tab. To get to other tabs on that page, navigate to the “Table of Contents” heading and press the right arrow key.</li>
   <li>On <a href="https://www.fulcrum.org/concern/file_sets/x633f103b?locale=en">resources pages</a>, “Info” is the default tab. To get to others tabs, navigate to the “Info” heading and press the right arrow key.</li>
@@ -87,10 +90,15 @@ permalink: /accessibility/
   <li>When the focus in the Fulcrum Reader is on a piece of embedded content such as a video or image, the VoiceOver rotor only recognizes the media controls as links. To access the other links and menu buttons through the rotor, navigate away from the embedded piece of media first.</li>
 </ul>
 
-<p>For reader using Microsoft Edge Read Aloud:</p>
+<p>For readers using Microsoft Edge Read Aloud:</p>
 <ul>
   <li>In the Fulcrum Reader, the visual display of text does not continue to scroll when Read Aloud reaches the bottom of the page.</li>
   <li>In the Fulcrum Reader, it is not possible to adjust the emphasis styles in Read Aloud.</li>
+</ul>
+
+<p>For readers playing time-based media in resources or ebooks:</p>
+<ul>
+  <li>As of January 2022, the current version of AblePlayer on Fulcrum has a known issue where audio descriptions can auto-play when users activate descriptions to be read aloud by the player and navigate book pages. Turning off the read aloud function of the descriptions will resolve this issue.</li>
 </ul>
 
 <h3>Keyboard Compatibility</h3>
@@ -124,7 +132,7 @@ permalink: /accessibility/
 <h2 id="features">Accessibility Features</h2>
 <ul>
   <li>For certain content, users can choose between page-by-page and scroll view in the Fulcrum Reader. To switch views, select the Preferences and Settings button and choose your preferred Display mode.</li>
-  <li>AblePlayer video and audio player has the capability for captions, audio descriptions, and transcripts, though not all publishers may provide these features. The caption font, size, color, and location can be adjusted in the player settings. Captions and transcripts are available when provided by the publisher.</li>
+  <li>AblePlayer video and audio player has the capability for captions, audio descriptions, and transcripts, though not all publishers may provide these features. The caption font, size, color, and location can be adjusted in the player settings. Captions and transcripts are available when provided by the publisher. As of January 2022, the current version of AblePlayer on Fulcrum has a known issue where audio descriptions can auto-play based on the time codes when users activate descriptions to be read aloud by the player. Turning off the read aloud function of the descriptions will resolve this issue.</li>
   <li>Image descriptions are enabled for screen readers through alt-text attributes (when provided by publisher).</li>
   <li>While there is no built-in text-to-speech feature, screen readers and text-to-speech browser extensions such as Read Aloud for Chrome should work with the Fulcrum Reader as well as all of the book, publisher, and media pages.</li>
 </ul>
@@ -142,7 +150,7 @@ permalink: /accessibility/
 
 <h3>ACLS Humanities E-Book</h3>
 <p><a href="/docs/Fulcrum-HEB-VPAT2.4INT-20210622.pdf">ACLS HEB Voluntary Product Accessibility Template (VPAT®) Version 2.4 INT</a></p>
-<p>In addition to the ACLS HEB VPAT®, ACLS HEB has made available an <a href="/docs/ConformanceandRemediationRoadmap-FulcrumACLSHEB-June2021.pdf">Accessibility Conformance and Remediation Roadmap (June 2021)</a> which describes timelines, development plans, and workarounds for issues identified in the VPAT®.</p>
+<p>In addition to the ACLS HEB VPAT®, ACLS HEB has made available an <a href="/docs/ConformanceandRemediationRoadmap-FulcrumACLSHEB-Feb2022.pdf">Accessibility Conformance and Remediation Roadmap (February 2022)</a> which describes timelines, development plans, and workarounds for issues identified in the VPAT®.</p>
 <p>There are three types of book content within the ACLS Humanities E-Book (HEB). The type informs the accessibility of that content:</p>
 <ul>
   <li>EPUBs created by reformatting print to digital and include page scans and uncorrected OCR text. When read in the Fulcrum Reader, the uncorrected OCR can be accessed by adjusting the Settings and Preferences to use the text renditions. These titles are available for chapter download only in PDF format. The PDF downloads do not include the uncorrected OCR.</li>
@@ -182,5 +190,8 @@ permalink: /accessibility/
   </li>
   <li><a href="https://bisg.org/store/ViewProduct.aspx?id=13534677">Book Industry Study Group Guide to Accessible Publishing and Cheat Sheets</a>
     <p>A live, up-to-date guide for publishers looking to start making their content accessible.</p>
+  </li>
+  <li><a href="https://docs.google.com/document/d/1VWu_Vzez_wq1UsDm_A5XEv06EEcygmtRZL1myyC57Tw/edit?usp=sharing">Audio/Video Guidelines for Michigan Publishing/U-M Press Authors</a>
+    <p>A live, up-to-date accessibility guide for authors and publishers who have time-based media that will be hosted on the Fulcrum platform, developed by Michigan Publishing's Accessibility Working Group.</p>
   </li>
 </ul>
