FULCRUMOPS-126 - update link to accessibility tickets in JIRA

--- a/fulcrum/accessibility.html
+++ b/fulcrum/accessibility.html
@@ -32,7 +32,7 @@ permalink: /accessibility/
 </div>
 
 <h2 id="timeline">Accessibility Timeline and Roadmap</h2>
-<p>Our work on platform accessibility issues is available in our <a href="https://tools.lib.umich.edu/jira/browse/HELIO-3689?jql=project%20in%20(HELIO%2C%20CSB)%20AND%20status%20in%20(%22In%20Progress%22%2C%20%22To%20Do%22%2C%20%22For%20Review%22)%20AND%20labels%20%3D%20accessibility">issue tracker for Fulcrum</a>.</p>
+<p>Our work on platform accessibility issues is available in our <a href="https://tools.lib.umich.edu/jira/browse/HELIO-3479?jql=project%20in%20(CSB%2C%20HELIO)%20AND%20status%20in%20(%22In%20Progress%22%2C%20%22To%20Do%22%2C%20%22For%20Review%22)%20AND%20resolution%20%3D%20Unresolved%20AND%20labels%20%3D%20accessibility%20ORDER%20BY%20priority%20DESC%2C%20updated%20DESC">issue tracker for Fulcrum</a>.</p>
 
 <h3>2022</h3>
 <p>In January 2022, the Fulcrum team upgraded its time-based media player, AblePlayer, to a more current version to improve support for video description and interactive transcripts.</p>
