HELIO-4199 - add new HEB a11y remediation roadmap; update link on page and other details

--- a/fulcrum/accessibility.html
+++ b/fulcrum/accessibility.html
@@ -4,7 +4,7 @@ title: Accessibility
 permalink: /accessibility/
 ---
 
-<p class="milli">Last updated: Feb 4, 2022</p>
+<p class="milli">Last updated: March 18, 2022</p>
 <p>Accessibility is a core value and design component of Fulcrum.  As part of the ongoing development of Fulcrum, we work to make the platform and its content inclusive, accessible, and usable for all readers.</p>
 <p>Fulcrum aims to meet the latest <a href="https://www.w3.org/WAI/WCAG21/quickref/?versions=2.1" title="Web Content Accessibility Guidelines 2.1 AA">WCAG 2 AA Standards</a> (currently WCAG 2.1 AA) in two ways:</p>
 <ul>
@@ -101,6 +101,11 @@ permalink: /accessibility/
   <li>As of January 2022, the current version of AblePlayer on Fulcrum has a known issue where audio descriptions can auto-play when users activate descriptions to be read aloud by the player and navigate book pages. Turning off the read aloud function of the descriptions will resolve this issue.</li>
 </ul>
 
+<p>For readers using Dragon NaturallySpeaking:</p>
+<ul>
+  <li>Filter buttons and content on the <a href="https://www.fulcrum.org/michigan">Search and Browse Books</a> page do not respond to voice command navigation.</li>
+</ul>
+
 <h3>Keyboard Compatibility</h3>
 <ul>
   <li>In the Fulcrum Reader, all of the pages, and media content such as videos, audio, and images should be accessible via standard keyboard controls only (no use of a mouse required).</li>
@@ -111,7 +116,6 @@ permalink: /accessibility/
       <li>ENTER to select</li>
     </ul>
   </li>
-  <li><a href="https://www.fulcrum.org/concern/monographs/6h440t76h?locale=en#stats">Stats charts</a> and some specialized content such as 3D models cannot be controlled via keyboard.</li>
   <li>Left and right arrow keys in the Fulcrum Reader provide shortcuts for easy page flipping or scrolling.</li>
   <li>Using scroll mode in the Fulcrum Reader, Page Up and Page Down and up and down arrow keys also allow for page scrolling.</li>
   <li>The default video player shortcuts are as follows:
@@ -150,7 +154,7 @@ permalink: /accessibility/
 
 <h3>ACLS Humanities E-Book</h3>
 <p><a href="/docs/Fulcrum-HEB-VPAT2.4INT-20210622.pdf">ACLS HEB Voluntary Product Accessibility Template (VPAT®) Version 2.4 INT</a></p>
-<p>In addition to the ACLS HEB VPAT®, ACLS HEB has made available an <a href="/docs/ConformanceandRemediationRoadmap-FulcrumACLSHEB-Feb2022.pdf">Accessibility Conformance and Remediation Roadmap (February 2022)</a> which describes timelines, development plans, and workarounds for issues identified in the VPAT®.</p>
+<p>In addition to the ACLS HEB VPAT®, ACLS HEB has made available an <a href="/docs/ConformanceandRemediationRoadmap-FulcrumACLSHEB-March2022.pdf">Accessibility Conformance and Remediation Roadmap (March 2022)</a> which describes timelines, development plans, and workarounds for issues identified in the VPAT®.</p>
 <p>There are three types of book content within the ACLS Humanities E-Book (HEB). The type informs the accessibility of that content:</p>
 <ul>
   <li>EPUBs created by reformatting print to digital and include page scans and uncorrected OCR text. When read in the Fulcrum Reader, the uncorrected OCR can be accessed by adjusting the Settings and Preferences to use the text renditions. These titles are available for chapter download only in PDF format. The PDF downloads do not include the uncorrected OCR.</li>
